[package]
name = "plotlings"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.14"
nannou = "0.16.0"
rand = "0.8.3"
svg = "0.9.2"
