[package]
name = "plotlings"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_plotings"
path = "./src/lib/mod.rs"

[[bin]]
name = "circle_packing"

[[bin]]
name = "dune"

[[bin]]
name = "line_groups"

[[bin]]
name = "maze"

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
kdtree = "0.6.0"
log = "0.4.14"
nannou = "0.17.1"
noise = "0.7.0"
once_cell = "1.8.0"
poisson = "0.10.1"
rand = "0.8.3"
splines = "4.0.3"
svg = "0.10.0"
